--- a/style.css
+++ b/style.css
@@ -17,10 +17,15 @@ footer {
     margin-top: -10px;
     padding: 0px;
 }
-.me {
+.container-md {
     background: #f4f4f4af;
     margin-top: 25px;
     margin-bottom: 25px;
     padding-bottom: 5px;
     padding-top: 5px;
+}
+button.nappi {
+    background: #000000;
+    color: #ffffff;
+    border-width: 1px;
 }
